--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,17 +1,25 @@
 server {
-    listen 8080;
+    listen 8080 default_server;
+    listen [::]:8080 default_server;
     server_name localhost;
 
     root /var/www/html/src/public;
 
     location / {
-        try_files $uri /index.php?args;
+        try_files $uri /index.php?is_args$args;
     }
 
-    location ~ \.php$ {
-        include fastcgi_params;
+    location ~ ^/index\.php(/|$) {
         fastcgi_pass php-fpm:9000;  # Связь с контейнером php-fpm
-        fastcgi_index index.php;
+                fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        internal;
     }
+
+    location ~ /\.php$ {
+            return 404;
+        }
 }
+
